// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StepIndicator component with buttons have to match snapshot 1`] = `
<StepIndicator
  active_item={null}
  active_url={null}
  class={null}
  className={null}
  current_step={1}
  data={
    Array [
      Object {
        "title": "Aa",
      },
      Object {
        "title": "Bb",
      },
      Object {
        "title": "Cc",
      },
    ]
  }
  enable_navigation={true}
  hide_numbers={false}
  on_change={null}
  on_item_render={null}
  skeleton={false}
  step_title="%step"
  use_navigation={null}
>
  <nav
    aria-label="progress"
    className="dnb-step-indicator"
  >
    <ol
      className="dnb-step-indicator__list"
    >
      <StepIndicatorItem
        activeItem={1}
        countSteps={3}
        currentItem={0}
        enable_navigation={true}
        hasReached={
          Array [
            1,
          ]
        }
        hide_numbers={false}
        is_active={null}
        is_current={null}
        key="0"
        on_change={null}
        on_click={null}
        on_item_render={null}
        on_render={null}
        setActiveItem={[Function]}
        step_title="Steg %step av %count"
        title="Aa"
        url={null}
        url_future={null}
        url_passed={null}
        use_navigation={null}
      >
        <li
          className="dnb-step-indicator__item dnb-step-indicator--visited"
        >
          <button
            className="dnb-anchor dnb-step-indicator__item-content dnb-step-indicator__item-content--link"
            onClick={[Function]}
            type="button"
          >
            <StepItemWrapper>
              <span
                aria-label="Steg 1 av 3"
                className="dnb-step-indicator__item-content--number"
              >
                1. 
              </span>
              <span
                className="dnb-step-indicator__item-content--text"
              >
                Aa
              </span>
            </StepItemWrapper>
          </button>
        </li>
      </StepIndicatorItem>
      <StepIndicatorItem
        activeItem={1}
        countSteps={3}
        currentItem={1}
        enable_navigation={true}
        hasReached={
          Array [
            1,
          ]
        }
        hide_numbers={false}
        is_active={null}
        is_current={null}
        key="1"
        on_change={null}
        on_click={null}
        on_item_render={null}
        on_render={null}
        setActiveItem={[Function]}
        step_title="Steg %step av %count"
        title="Bb"
        url={null}
        url_future={null}
        url_passed={null}
        use_navigation={null}
      >
        <li
          aria-current="step"
          className="dnb-step-indicator__item dnb-step-indicator--active"
        >
          <button
            className="dnb-anchor dnb-step-indicator__item-content dnb-step-indicator__item-content--link"
            onClick={[Function]}
            type="button"
          >
            <StepItemWrapper>
              <span
                aria-label="Steg 2 av 3"
                className="dnb-step-indicator__item-content--number"
              >
                2. 
              </span>
              <span
                className="dnb-step-indicator__item-content--text"
              >
                Bb
              </span>
            </StepItemWrapper>
          </button>
        </li>
      </StepIndicatorItem>
      <StepIndicatorItem
        activeItem={1}
        countSteps={3}
        currentItem={2}
        enable_navigation={true}
        hasReached={
          Array [
            1,
          ]
        }
        hide_numbers={false}
        is_active={null}
        is_current={null}
        key="2"
        on_change={null}
        on_click={null}
        on_item_render={null}
        on_render={null}
        setActiveItem={[Function]}
        step_title="Steg %step av %count"
        title="Cc"
        url={null}
        url_future={null}
        url_passed={null}
        use_navigation={null}
      >
        <li
          className="dnb-step-indicator__item"
        >
          <button
            aria-disabled={true}
            className="dnb-anchor dnb-step-indicator__item-content dnb-step-indicator__item-content--link dnb-anchor--no-style"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <StepItemWrapper>
              <span
                aria-label="Steg 3 av 3"
                className="dnb-step-indicator__item-content--number"
              >
                3. 
              </span>
              <span
                className="dnb-step-indicator__item-content--text"
              >
                Cc
              </span>
            </StepItemWrapper>
          </button>
        </li>
      </StepIndicatorItem>
    </ol>
  </nav>
</StepIndicator>
`;

exports[`StepIndicator component with urls have to match snapshot 1`] = `
<StepIndicator
  active_item="active_item"
  active_url="?b"
  class="class"
  className="className"
  current_step="current_step"
  data={
    Array [
      Object {
        "title": "Aa",
        "url": "?a",
      },
      Object {
        "title": "Bb",
        "url": "?b",
      },
      Object {
        "title": "Cc",
        "url": "?c",
        "url_future": "",
      },
    ]
  }
  enable_navigation="enable_navigation"
  hide_numbers="hide_numbers"
  on_change={[Function]}
  on_item_render={null}
  skeleton="skeleton"
  step_title="step_title"
  use_navigation="use_navigation"
>
  <nav
    aria-label="progress"
    className="dnb-step-indicator className class"
  >
    <ol
      className="dnb-step-indicator__list"
    >
      <StepIndicatorItem
        activeItem={1}
        countSteps={3}
        currentItem={0}
        enable_navigation="enable_navigation"
        hasReached={
          Array [
            1,
          ]
        }
        hide_numbers="hide_numbers"
        is_active={null}
        is_current={null}
        key="0"
        on_change={[Function]}
        on_click={null}
        on_item_render={null}
        on_render={null}
        setActiveItem={[Function]}
        step_title="step_title"
        title="Aa"
        url="?a"
        url_future={null}
        url_passed={null}
        use_navigation="use_navigation"
      >
        <li
          className="dnb-step-indicator__item dnb-step-indicator--visited"
        >
          <a
            className="dnb-anchor dnb-step-indicator__item-content dnb-step-indicator__item-content--link"
            href="?a"
            onClick={[Function]}
          >
            <StepItemWrapper>
              <span
                aria-label="step_title"
                className="dnb-step-indicator__item-content--number"
              >
                1. 
              </span>
              <span
                className="dnb-step-indicator__item-content--text"
              >
                Aa
              </span>
            </StepItemWrapper>
          </a>
        </li>
      </StepIndicatorItem>
      <StepIndicatorItem
        activeItem={1}
        countSteps={3}
        currentItem={1}
        enable_navigation="enable_navigation"
        hasReached={
          Array [
            1,
          ]
        }
        hide_numbers="hide_numbers"
        is_active={null}
        is_current={null}
        key="1"
        on_change={[Function]}
        on_click={null}
        on_item_render={null}
        on_render={null}
        setActiveItem={[Function]}
        step_title="step_title"
        title="Bb"
        url="?b"
        url_future={null}
        url_passed={null}
        use_navigation="use_navigation"
      >
        <li
          aria-current="step"
          className="dnb-step-indicator__item dnb-step-indicator--active"
        >
          <a
            className="dnb-anchor dnb-step-indicator__item-content dnb-step-indicator__item-content--link"
            href="?b"
            onClick={[Function]}
          >
            <StepItemWrapper>
              <span
                aria-label="step_title"
                className="dnb-step-indicator__item-content--number"
              >
                2. 
              </span>
              <span
                className="dnb-step-indicator__item-content--text"
              >
                Bb
              </span>
            </StepItemWrapper>
          </a>
        </li>
      </StepIndicatorItem>
      <StepIndicatorItem
        activeItem={1}
        countSteps={3}
        currentItem={2}
        enable_navigation="enable_navigation"
        hasReached={
          Array [
            1,
          ]
        }
        hide_numbers="hide_numbers"
        is_active={null}
        is_current={null}
        key="2"
        on_change={[Function]}
        on_click={null}
        on_item_render={null}
        on_render={null}
        setActiveItem={[Function]}
        step_title="step_title"
        title="Cc"
        url="?c"
        url_future=""
        url_passed={null}
        use_navigation="use_navigation"
      >
        <li
          className="dnb-step-indicator__item"
        >
          <span
            className="dnb-step-indicator__item-content dnb-step-indicator__item-content--static"
          >
            <StepItemWrapper>
              <span
                aria-label="step_title"
                className="dnb-step-indicator__item-content--number"
              >
                3. 
              </span>
              <span
                className="dnb-step-indicator__item-content--text"
              >
                Cc
              </span>
            </StepItemWrapper>
          </span>
        </li>
      </StepIndicatorItem>
    </ol>
  </nav>
</StepIndicator>
`;

exports[`StepIndicator scss have to match default theme snapshot 1`] = `
"/*
* StepIndicator theme
*
*/
/**
 * This file is only used to make themes independent
 * so that they can get imported individually, without the core styles
 *
 */
/*
 * Utilities
 */
.dnb-step-indicator__item-content--static {
  color: var(--color-emerald-green); }

.dnb-step-indicator__item-content--link {
  color: var(--color-sea-green); }

.dnb-step-indicator__item {
  margin-left: 4.5rem; }
  .dnb-step-indicator__item:first-child {
    margin-left: 0; }
  @media screen and (max-width: 50em) {
    .dnb-step-indicator__item {
      margin-left: 2rem; } }

.dnb-step-indicator::after {
  color: var(--color-mint-green); }

.dnb-step-indicator--active.dnb-step-indicator__item::after,
.dnb-step-indicator--active .dnb-step-indicator__item-content::after {
  background-color: var(--color-sea-green); }

.dnb-step-indicator span[hidden],
.dnb-step-indicator--active .dnb-step-indicator__item-content {
  font-weight: var(--font-weight-medium); }
  .dnb-step-indicator span[hidden]:not(:hover),
  .dnb-step-indicator--active .dnb-step-indicator__item-content:not(:hover) {
    color: var(--color-emerald-green); }
"
`;

exports[`StepIndicator scss have to match snapshot 1`] = `
"/*
* DNB StepIndicator
*
*/
/**
 * This file is only used to make components independent
 * so that they can get imported individually, without the core styles
 *
 */
/*
 * Utilities
 */
/*
 * Scopes
 *
 */
/*
 * Document Reset
 *
 */
.dnb-step-indicator {
  font-family: var(--font-family-default);
  font-weight: var(--font-weight-basis);
  font-size: var(--font-size-small);
  font-style: normal;
  line-height: var(--line-height-basis);
  color: var(--color-black-80, #333);
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  /**
  * Ensure consistency and use the same as HTML reset -> html {...}
  * between base and code package
  */
  -moz-tab-size: 4;
  tab-size: 4;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  word-break: break-word;
  /**
  * 1. Remove repeating backgrounds in all browsers (opinionated).
  * 2. Add border box sizing in all browsers (opinionated).
  */
  /**
  * 1. Add text decoration inheritance in all browsers (opinionated).
  * 2. Add vertical alignment inheritance in all browsers (opinionated).
  */
  margin: 0;
  padding: 0; }
  .dnb-step-indicator *,
  .dnb-step-indicator ::before,
  .dnb-step-indicator ::after {
    background-repeat: no-repeat;
    /* 1 */
    box-sizing: border-box;
    /* 2 */ }
  .dnb-step-indicator ::before,
  .dnb-step-indicator ::after {
    text-decoration: inherit;
    /* 1 */
    vertical-align: inherit;
    /* 2 */ }

/*
 * StepIndicator component
 *
 */
.dnb-step-indicator {
  position: relative;
  z-index: 1;
  display: block;
  padding: 0; }
  .dnb-step-indicator__list {
    display: flex;
    flex-direction: row;
    align-items: stretch;
    padding: 0;
    margin: 0;
    list-style: none; }
  .dnb-spacing .dnb-step-indicator__list,
  .dnb-spacing .dnb-step-indicator__list li {
    margin-top: 0;
    margin-bottom: 0; }
  .dnb-step-indicator__item {
    align-self: flex-end; }
  .dnb-step-indicator__item-content {
    font-size: var(--font-size-basis); }
    .dnb-step-indicator__item-contenta, .dnb-step-indicator__item-content.dnb-anchor, .dnb-step-indicator__item-content--static, .dnb-step-indicator__item-content--link {
      position: relative;
      z-index: 2;
      display: inline-flex;
      align-items: flex-end;
      margin: 0;
      padding: 0.25rem 0.25rem;
      height: 100%;
      border-bottom: none;
      text-decoration: none;
      box-shadow: none; }
    .dnb-step-indicator__item-content--link.dnb-anchor {
      line-height: var(--line-height-basis); }
    .dnb-step-indicator__item-content--link:focus[disabled],
    html:not([data-whatintent='touch']) .dnb-step-indicator__item-content--link:focus[disabled] {
      cursor: not-allowed; }
    .dnb-step-indicator__item-content--link:focus:not([disabled]),
    html:not([data-whatintent='touch']) .dnb-step-indicator__item-content--link:focus:not([disabled]) {
      outline: none; }
      html[data-whatinput='keyboard'] .dnb-step-indicator__item-content--link:focus:not([disabled]), html[data-whatinput='keyboard']
      html:not([data-whatintent='touch']) .dnb-step-indicator__item-content--link:focus:not([disabled]) {
        --border-color: var(--color-emerald-green);
        box-shadow: 0 0 0 0.125rem var(--border-color);
        border-color: transparent; }
        @media screen and (-ms-high-contrast: none) {
          html[data-whatinput='keyboard'] .dnb-step-indicator__item-content--link:focus:not([disabled]), html[data-whatinput='keyboard']
          html:not([data-whatintent='touch']) .dnb-step-indicator__item-content--link:focus:not([disabled]) {
            box-shadow: 0 0 0 0.125rem var(--color-emerald-green); } }
      .dnb-step-indicator__item-content--link:focus:not([disabled])::after,
      html:not([data-whatintent='touch']) .dnb-step-indicator__item-content--link:focus:not([disabled])::after {
        content: none; }
    .dnb-step-indicator__item-content--number {
      padding-right: 0.25rem;
      white-space: nowrap; }
    .dnb-step-indicator__item-content--text {
      text-align: left; }
    .dnb-step-indicator__item-content::after {
      content: '';
      position: absolute;
      z-index: 1;
      left: 0;
      bottom: 0;
      width: 100%;
      height: 3px;
      border-radius: 1.5px; }
  .dnb-step-indicator::after {
    content: '';
    position: absolute;
    z-index: -1;
    left: -100vw;
    bottom: 0;
    width: 100vw;
    height: 1px;
    color: var(--color-black);
    background-color: currentColor;
    box-shadow: 100vw 0 0 0 currentColor; }
"
`;
